wordpresstest/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: payroll
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: payroll-wordpress-cgm.com # Replace with your desired hostname
    http:
      paths:
      - path: /wordpress  # Replace with your desired path
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
